_sass/minima/custom-styles.scss
// Placeholder to allow defining custom styles that override everything else.
// (Use `_sass/minima/custom-variables.scss` to override variable defaults)


/* Colors:
 * - blue: #9CDCFE (links)
 * - brown skin: #CE9178
 * - orange: #F0AD4E
 * - gray: #C8C8C8 (text)
 *
 * Backgrounds:
 * - Black light: #1F1F1F
 * - Black light+: #282828
 * 
 * Border:
 * - Gray : #333
 */

:root {
    --base-font: Consolas, 'Courier New', monospace;

    --blue-color: #9CDCFE;
    --blue-dark-color: #2A79B1;
    --brown-skin-color: #CE9178;
    --orange-color: #F0AD4E;
    --green-light-color: #75A35C;
    --gray-color: #C8C8C8;
    --black-light-color: #1F1F1F;
    --black-light-plus-color: #282828;
}


body {        
    background-color: var(--black-light-color);
}

html, body, footer {
    font-family: var(--base-font);
    font-size: medium;
    color: var(--gray-color);
    
    -webkit-text-size-adjust: none;
    -ms-text-size-adjust: 100%;
    -moz-text-size-adjust: none;
    text-size-adjust: none;
    text-align: justify;
}

/* Links / Anchor  */

a {
    color: var(--blue-color);
    text-decoration: none;
}

a:hover {
    color: var(--orange-color);
    text-decoration: none;
}

a:visited {
    color: var(--blue-color);
}

a:visited:hover {
    color: var(--orange-color);
}

hr {
    padding: 0;
    margin: 7px 0 8px 0;
    height: 1px;
    background-color: #333;
    border-width: 0;
}

h3 {
    font-size: 16px;
    font-weight: normal;
    color: var(--orange-color);
}

pre, textarea {
    word-break: break-all;
    word-wrap: break-word;

    font-size: 13px;
    display: block;
    margin: 0 0 10px;
}

pre, code, textarea {        
    background-color: var(--black-light-plus-color);
    color: var(--gray-color);
    border: none;
    
    /* New line when the line length is superior to the pre width */
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
}

code {
    padding: 0px;
}

blockquote {
    font-size: inherit;
    font-style: inherit;
    background-color: var(--black-light-color);
}

button, input {
    font-family: var(--base-font);
    font-size: 16px;
    color: var(--gray-color);

    text-align: center;

    background-color: var(--black-light-color);
    
    border-width: 1px;
    border-style: solid;
    border-color: #333;
    
    padding: 10px;
    margin: 10px;
    width: 90%;
}

.search-input textarea:focus, input:focus {
    outline: none;
}

button:hover {    
    border-width: 1px;
    border-style: solid;
    border-color: white;
}

table {
    border: 0px;
    margin-bottom: 0px;
}

table td {
    background-color: var(--black-light-color);

    border: 0px;
    margin-bottom: 3px;
}

table th, table td {
    padding: 0px;
}

.site-header {
    border-top: none;
    border-bottom: none /* 1px solid #333 */;
}

.site-title, .site-title:visited {

    font-size: inherit;
    font-weight: inherit;
    letter-spacing: initial;
	color: var(--blue-dark-color);
}

.site-nav {
    background-color: var(--black-light-color);
    border: 0px;
}

.site-nav .page-link {
    color: var(--blue-color);
}

.site-footer {
    border-top: none /* 1px solid #333 */;
}

.post-link:hover {
    color: var(--orange-color);
    text-decoration: none;
}

.post-meta {
    font-size: inherit;
    margin-bottom: 0px;
    margin-top: 0px;
}

.post-title, .post-content h1 {
    font-size: inherit;
    letter-spacing: inherit;
}

.post-title {
    border: none;
}

.post-content h3 {
    font-size: inherit;
}

.highlight {
    background-color: var(--black-light-plus-color);
    border: none;
}

.highlighter-rouge .highlight {
    background-color: var(--black-light-plus-color);
}

.footer-col-wrapper, .social-links {
    font-size: inherit;
}

.social-media-list li a, .pagination li a {
    border: none;
}

.file-separator {
    color: #333;
}

.wrapper-header {
    padding-right: 30px;
    padding-left: 30px;
}

.home {
    padding-top: 30%;
}

/* custom Scrollbar */

::-webkit-scrollbar {
    width: 10px;
    background: var(--black-light-color);
}

::-webkit-scrollbar-thumb {
    background: var(--black-light-plus-color);
}

/* tipue search bar */

#tipue_search_input {
    font-family: var(--base-font);
    color: var(--gray-color);
	border-color: #333;
}

#tipue_search_results_count {
    font-family: var(--base-font);
    color: var(--gray-color);
}

.tipue_search_content_title {
    font-family: var(--base-font);
    font-size: 16px;
}

.tipue_search_content_title a {
    color: var(--blue-color);
}

.tipue_search_content_title a:hover {
    color: var(--orange-color);
    text-decoration: none;
}

.tipue_search_content_text {
    font-family: var(--base-font);
    color: var(--gray-color);
    font-size: medium;
}

.tipue_search_content_bold {
    font-family: var(--base-font);
    color: var(--orange-color);
}

/* Navbar - General */

#navbar ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    float: center;
}

#navbar li {
    float: left; /* Keep them aligned with the following order: Home, Blog, ...*/
}

#navbar li a {
    display: inline-block;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

/* Navbar - Dropdown menu */

#navbar .dropdown-content {
    display: none;
    position: absolute;
    background-color: var(--black-light-color);
}

#navbar .dropdown-content a {
    padding: 0px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

#navbar .dropdown:hover .dropdown-content {
    display: block;
}

#navbar .dropdown-header {
    display: block;
    padding: 0px 10px;
}

#navbar .li-right {
    float: right; /* Move Links and Files on the right side of the screen */
}

